First implementation of classes in jface resources package (Font-, Image- and ColorRegistry). Because of this Resource, FontData and Device in RWT